--- a/assets/sass/2-basics/_layout.sass
+++ b/assets/sass/2-basics/_layout.sass
@@ -38,3 +38,24 @@
 
 .component-body
     padding-top: 70px
+
+
+/* Custom col */
+@media (min-width: 1200px)
+    .custom-col
+        width: calc(100% / 3)
+
+@media (min-width: 1600px)
+    .custom-col
+        width: calc(100% / 4)
+    
+@media (min-width: 1900px)
+    .custom-col
+        width: calc(100% / 5)
+    
+@media (min-width: 2560px)
+    .custom-col
+        width: calc(100% / 6)
+
+
+
