--- a/assets/sass/3-component/_sidebar-list.sass
+++ b/assets/sass/3-component/_sidebar-list.sass
@@ -172,6 +172,7 @@ ul.simple-list
                     width: 38px
                     text-align: right
                     img
+                        min-width: auto !important
                         width: auto !important
                         height: auto !important
                         max-width: 38px
