--- a/assets/sass/4-pages/_feeds.scss
+++ b/assets/sass/4-pages/_feeds.scss
@@ -1,7 +1,7 @@
 .feeds-wrapper{
     width: 100%;
     float: left;
-    padding: $card-pad;
+    padding: 16px;
     background: $white;
     height: 570px;
     .feed-head{
